[package]
name = "update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
ic-agent = "0.15.0"
garcon = "0.2.3"
candid = "0.7.14"
anyhow = "1.0.57"
tokio = { version = "1", features = ["full"] }